--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     let bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
     if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) {
       //跳转移动端页面
-      window.location.href = '../punkcookiemobile/index.html'
+      window.location.href = '../PunkCookieMobile/index.html'
     }
   })()
 </script>
